# iOS-client

./: .gitattributes  .gitignore  .mboxconfig  .orbit_enable_user.rb  .pecker.yml  .rcinfo  .release.json  .swiftlint.yml  CHANGELOG.md  Cosign.xcconfig  Gemfile  Lark.xcconfig  Podfile  README.md  Rakefile  alchemy_config.json  bitsky.sh  config.json  deps.yml  if_pod.rb  lark.order  modules.json  monorepo_config.yml  package.json  remote_cache_enable_users.rb  run-sonar-swift.sh  rustpb_change_log.txt  sonar-project.properties
.bits/: analysis_white.txt  bits_components.yaml  build_package.yml  integration.yml  workflow.yml
.bitsky/: bitsky.yaml
.bytedev/: codelines.yaml
.eescaffold/: bricks.yaml  project.yaml  swiftlint.yaml
BroadcastUploadExtension/: Empty.swift  Info.plist
BuildScript/: XcodeEdit  config.json  config_docs.json  config_old_inhouse.json  develop.json
ExportPlists/: LarkInHouseExport.plist
IntentsExtension/: Info.plist  IntentHandler+DocsWidget.swift  IntentHandler+UtilityWidget.swift  IntentHandler.swift
InternationalScript/: CheckCommitType.js  RemoveUnusedImageAssets.js  ReplaceChangelogLink.js  buildH5Props.sh
Lark/: Alpha-Info.plist  Info.plist  LaunchScreen.storyboard  lark_plist.json
Lark.xcodeproj/: project.pbxproj
Lark.xcworkspace/: contents.xcworkspacedata  pod.json
LarkAppIntents/: Info.plist  LarkAppIntentsExtension.swift
Modules/LarkTime/rust-jarvis/jarvis/: Cargo.toml
Modules/LarkTime/rust-jarvis/jarvis/src/: clean.rs  cmd.rs  filesize.rs  i18n.rs  install.rs  larktime.rs  main.rs  open.rs  podfile.rs
(+32809 files in other folders)
