[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map = "0.5.4"
clap = "~3.0.7"
cmd_lib = "~1.3.0"
colored = "~2"
walkdir = "~2"
dirs = "4.0.0"
yaml-rust = "0.4.5"
itertools = "~0.9.0"